fix position of table and some changes in style

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel='stylesheet prefetch' href='https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/my-movies.css">
+  <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="index.js"></script>
-  <script data-main="index" src="require.js"></script>
   
 </head>
 
@@ -34,7 +33,7 @@
 
   </div>
 
-  <footer class="container-fluid text-center">
+  <footer class="container-fluid text-center" id="footer">
     <p>&copy; Copyright 2018</p>
   </footer>
   <script>
